NIFI-11938: Code cleanup